--- a/_config.yml
+++ b/_config.yml
@@ -1,53 +1,72 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+author: GitHub User
+name: Your Username
 
-title: Master student
-email: s230032@dtu.dk
+title: your awesome title
 description: >- # this means to ignore newlines until "baseurl:"
-   Analyzing the SF Crime Data.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://github.com/YiYuan22/YiYuan22.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+
+email: your-email@domain.com
+
+# social links
+twitter_username: anxhe_
+github_username:  anxhe
+# rss: rss
+#dribbble_username: jekyll
+#facebook_username: jekyll
+#flickr_username: jekyll
+#instagram_username: jekyll
+#linkedin_username: jekyll
+#pinterest_username: jekyll
+#youtube_username: jekyll
+#googleplus_username: +jekyll
+
+show_excerpts: false # set to true to show excerpts on the homepage
+
+# Minima date format
+# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+minima:
+  date_format: "%b %-d, %Y"
+
+# If you want to link only specific pages in your header, uncomment
+# this and add the path to the pages in order as they should show up
+# baseurl: http://127.0.0.1:4000
+header_pages:
+  - index.md
+  - blog.md
+
+# Config section the home
+
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
+markdown: kramdown
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+jekyll-theme-experiment:
+  about:
+    avatar : https://robohash.org/experiment-avatar.png?size=300x300
+
+  portfolio:
+    title: Portfolio
+    projects:
+
+      - name: Jekyll Theme experiment
+        github: https://github.com/anxhe/jekyll-theme-experiment
+        img_relative_url: /assets/example.png
+
+      - name: Jekyll Theme experiment
+        github: https://github.com/anxhe/jekyll-theme-experiment
+        img_relative_url: /assets/example.png
+
+  tools:
+    title: Tools and Experience
+    icons:
+      - relative_url: /assets/icons/bitbucket/bitbucket-original.svg
+      - relative_url: /assets/icons/heroku/heroku-original.svg
+      - relative_url: /assets/icons/git/git-original.svg
+      - relative_url: /assets/icons/express/express-original.svg
+      - relative_url: /assets/icons/angularjs/angularjs-original.svg
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
